--- a/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn14_translation-sr-brankokovacevic.json
@@ -142,7 +142,7 @@
   "dn14:1.17.1": "I tako, monasi, pošto je preminuo na Tusita nebu, bodhisatta Vipassī se, svestan i s jasnim razumevanjem, preporodio u materici svoje majke.",
   "dn14:1.17.2": "Takva je priroda stvari.",
   "dn14:1.17.3": "Monasi, kada se bodhisatta, svestan i s jasnim razumevanjem, preporodi u materici svoje majke, ",
-  "dn14:1.17.4": "u \novom svetu, sa njegovim božanstvima, Mārama i Brahmama, zajedno sa \npokolenjem isposnika i brahmana, plemenitih i običnih ljudi, priroda \nstvari jeste i da se u tom svetu javi velika, nemerljiva svetlost.",
+  "dn14:1.17.4": "u ovom svetu, sa njegovim božanstvima, Mārama i Brahmama, zajedno sa pokolenjem isposnika i brahmana, plemenitih i običnih ljudi, priroda stvari jeste i da se u tom svetu javi velika, nemerljiva svetlost.",
   "dn14:1.17.5": "I čak u tom bezdanom prostoru između svetova, praznom, sumornom i potpuno mračnom, gde mesec i sunce, koliko god bili moćni i sjajni, ne mogu učiniti da njihova svetlost prodre – i tu se velika, nemerljiva svetlost koja nadmašuje sjaj božanstava pojavila.",
   "dn14:1.17.6": "A bića koja su se tamo preporodila, ugledaše jedna druge u tom svetlu: „Zaista, i drugih bića ovde ima.”",
   "dn14:1.17.7": "Čitav sistem deset hiljada svetova se zatresao, zaljuljao i zadrhtao i u njemu se velika, nemerljiva svetlost koja nadmašuje sjaj božanstava pojavila.’",
@@ -157,7 +157,7 @@
   "dn14:1.20.2": "Takva je priroda stvari.",
   "dn14:1.21.1": "Monasi, kada se bodhisatta preporodi u materici svoje majke, priroda stvari jeste i da u njoj nema bilo kakvog bola. Ona je radosna i oslobođena svake tegobe. Vidi bodhisattu u svojoj materici, sa svim njegovim udovima, bez ikakvog nedostatka. ",
   "dn14:1.21.2": "Kao kada bi plava, žuta, crvena, bela ili braon nit bila provučena kroz divan dragi kamen beril, boje najčistijeg mora, sa osam stranica, dobro obrađen, a čovek dobrog vida uzme ga u ruku ",
-  "dn14:1.21.3": "i \novako o njemu kaže: ’Ovo je divan dragi kamen beril, boje najčistijeg \nmora, sa osam stranica, dobro obrađen, kroz koji je provučena plava, \nžuta, crvena, bela ili braon nit’.",
+  "dn14:1.21.3": "i ovako o njemu kaže: ’Ovo je divan dragi kamen beril, boje najčistijeg mora, sa osam stranica, dobro obrađen, kroz koji je provučena plava, žuta, crvena, bela ili braon nit’.",
   "dn14:1.21.4": "Isto tako, monasi, kada se bodhisatta preporodi u materici svoje majke, priroda stvari jeste i da u njoj nema bilo kakvog bola. Ona je radosna i oslobođena svake tegobe. Vidi bodhisattu u svojoj materici, sa svim njegovim udovima, bez ikakvog nedostatka. ",
   "dn14:1.21.5": "Takva je priroda stvari.",
   "dn14:1.22.1": "Monasi, priroda stvari jeste i da sedam dana posle rođenja bodhisatte, njegova majka umre i preporodi se na Tusita nebu.",
