Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
@@ -45,7 +45,7 @@
   "pli-tv-bu-vb-np28:2.3": "The Kattika full moon that ends the first rainy-season residence: ",
   "pli-tv-bu-vb-np28:2.4": "the Kattika full moon of the invitation ceremony is what is meant. ",
   "pli-tv-bu-vb-np28:2.5": "Haste-cloth: ",
-  "pli-tv-bu-vb-np28:2.6": "when someone wants to go out with the army, when someone wants to go away, when someone is sick, when someone is pregnant, when someone without faith acquires faith, when someone without confidence acquires confidence—if that person sends a message to the monks, saying, “Come, Venerables, I wish to give a robe to those who have completed the rainy-season residence,” this is called “haste-cloth”. ",
+  "pli-tv-bu-vb-np28:2.6": "when someone intends to set out with the army, when someone intends to set out on a journey, when someone is sick, when someone is pregnant, when someone without faith acquires faith, when someone without confidence acquires confidence—if that person sends a message to the monks, saying, “Come, Venerables, I wish to give a robe to those who have completed the rainy-season residence,” this is called “haste-cloth”. ",
   "pli-tv-bu-vb-np28:2.7": "He may receive it if he regards it as urgent. He may then store it until the end of the robe season: ",
   "pli-tv-bu-vb-np28:2.8": "establishing the perception of it as a haste-cloth, he may store it. ",
   "pli-tv-bu-vb-np28:2.9": "The robe season: ",
