Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
@@ -6,7 +6,7 @@
   "pli-tv-bu-vb-np28:0.5": "28. The training rule on haste-cloth ",
   "pli-tv-bu-vb-np28:1.1.0": "Origin story ",
   "pli-tv-bu-vb-np28:1.1.1": "At one time when the Buddha was staying at Sāvatthī in Anāthapiṇḍika’s Monastery, ",
-  "pli-tv-bu-vb-np28:1.1.2": "a government official who was going away sent a message to the monks, saying, ",
+  "pli-tv-bu-vb-np28:1.1.2": "a government official who was about to set out on a journey sent a message to the monks, saying, ",
   "pli-tv-bu-vb-np28:1.1.3": "“Come, Venerables, I wish to give robe-cloth to those who have completed the rainy-season residence.” ",
   "pli-tv-bu-vb-np28:1.1.4": "The monks thought, ",
   "pli-tv-bu-vb-np28:1.1.5": "“The Buddha has allowed such robes only for those who have completed the rains residence,” ",
