Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np28_translation-en-brahmali.json
@@ -13,7 +13,7 @@
   "pli-tv-bu-vb-np28:1.1.6": "and being afraid of wrongdoing they did not go. ",
   "pli-tv-bu-vb-np28:1.1.7": "That government official complained and criticized them, ",
   "pli-tv-bu-vb-np28:1.1.8": "“How could they not come when I send a message? ",
-  "pli-tv-bu-vb-np28:1.1.9": "I’m going out with the army. ",
+  "pli-tv-bu-vb-np28:1.1.9": "I’m about to set out with the army. ",
   "pli-tv-bu-vb-np28:1.1.10": "It’s hard to know whether I’ll live or die.” ",
   "pli-tv-bu-vb-np28:1.1.11": "The monks heard the complaints of that government official, ",
   "pli-tv-bu-vb-np28:1.1.12": "and they told the Buddha. ",
