--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -318,7 +318,7 @@
   "ja-name:317.ja285": "Die Wildschweine und die Kristallhöhle ",
   "ja-name:318.ja286": "Das Schwein Sālūka ",
   "ja-name:319.ja287": "Kein Lob dem Besitz ",
-  "ja-name:320.ja288": "Der Preis des Fischs ",
+  "ja-name:320.ja288": "Ein Fischschwarm ",
   "ja-name:321.ja289": "Von verschiedenen Wünschen ",
   "ja-name:322.ja290": "Eine Tugendprobe ",
   "ja-name:323.ja-kumbhavagga": "Das Kapitel mit dem Becher ",
