Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -320,7 +320,7 @@
   "ja-name:319.ja287": "Kein Lob dem Besitz ",
   "ja-name:320.ja288": "Ein Fischschwarm ",
   "ja-name:321.ja289": "Von verschiedenen Wünschen ",
-  "ja-name:322.ja290": "Eine Tugendprobe ",
+  "ja-name:322.ja290": "Prüfung der Tugend ",
   "ja-name:323.ja-kumbhavagga": "Das Kapitel mit dem Becher ",
   "ja-name:324.ja291": "Der Glücksbecher ",
   "ja-name:325.ja292": "Schönflügel der Krähenkönig ",
