--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -3,7 +3,7 @@
   "dn15:0.2": "Govor o uzročnosti",
   "dn15:1.0": "1. Uslovljeni nastanak",
   "dn15:1.1": "Ovako sam čuo.",
-  "dn15:1.2": "Jednom je Blaženi boravio među Kuruima, u blizini mesta po imenu Kammāsadhamma.",
+  "dn15:1.2": "Jednom je Blaženi boravio među Kuruima, kraj grada po imenu Kammāsadhamma.",
   "dn15:1.3": "Onda poštovani Ānanda dođe do Blaženog, pokloni se, pa sede sa strane. Dok je tako sedeo, ovako mu reče: ",
   "dn15:1.4": "„Zadivljujuće je to, poštovani, čudesno je to! "
 }
