--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -6,5 +6,6 @@
   "dn15:1.2": "Jednom je Blaženi boravio među Kuruima, kraj grada po imenu Kammāsadhamma.",
   "dn15:1.3": "Onda poštovani Ānanda dođe do Blaženog, pokloni se, pa sede sa strane. Dok je tako sedeo, ovako mu reče: ",
   "dn15:1.4": "„Zadivljujuće je to, poštovani, čudesno je to! ",
-  "dn15:1.5": "Koliko je ovaj uslovljeni nastanak dubok  i koliko se čini dubokim, a opet meni izgleda toliko jasnim da jasniji ne može biti.”"
+  "dn15:1.5": "Koliko je ovaj uslovljeni nastanak dubok  i koliko se čini dubokim, a opet meni izgleda toliko jasnim da jasniji ne može biti.”",
+  "dn15:1.6": "„Ne govori tako, Ānanda! Ne govori tako! "
 }
