Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -7,5 +7,6 @@
   "dn15:1.3": "Onda poštovani Ānanda dođe do Blaženog, pokloni se, pa sede sa strane. Dok je tako sedeo, ovako mu reče: ",
   "dn15:1.4": "„Zadivljujuće je to, poštovani, čudesno je to! ",
   "dn15:1.5": "Koliko je ovaj uslovljeni nastanak dubok  i koliko se čini dubokim, a opet meni izgleda toliko jasnim da jasniji ne može biti.”",
-  "dn15:1.6": "„Ne govori tako, Ānanda! Ne govori tako!"
+  "dn15:1.6": "„Ne govori tako, Ānanda! Ne govori tako!",
+  "dn15:1.7": "Ovaj uslovljeni nastanak jeste dubok i čini se dubokim."
 }
