--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -10,5 +10,6 @@
   "dn15:1.6": "„Ne govori tako, Ānanda! Ne govori tako!",
   "dn15:1.7": "Ovaj uslovljeni nastanak jeste dubok i čini se dubokim.",
   "dn15:1.8": "Zato što ne razume i ne proniče u ovo učenje, Ānanda, ovo pokolenje postalo je nalik zamršenom klupku vune, zamršenom kanapu, gustišu od isprepletane rogozine i trske, te nije u stanju da nadiđe ovo mesto gubitka, pogibelji, patnje, stalnog preporađanja.",
-  "dn15:2.1": "Ako bi neko pitao: ’Postoji li neki poseban uzrok nastanka starosti i smrti?’"
+  "dn15:2.1": "Ako bi neko pitao: ’Postoji li neki poseban uzrok nastanka starosti i smrti?’",
+  "dn15:2.2": "Ako bi te zatim pitali: ’Koji je uzrok nastanka starosti i smrti?’, treba da odgovoriš: ’Rođenje je uzrok starosti i smrti’."
 }
