--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -12,5 +12,6 @@
   "dn15:1.8": "Zato što ne razume i ne proniče u ovo učenje, Ānanda, ovo pokolenje postalo je nalik zamršenom klupku vune, zamršenom kanapu, gustišu od isprepletane rogozine i trske, te nije u stanju da nadiđe ovo mesto gubitka, pogibelji, patnje, stalnog preporađanja.",
   "dn15:2.1": "Ako bi neko pitao: ’Postoji li neki poseban uzrok nastanka starosti i smrti?’",
   "dn15:2.2": "Ako bi te zatim pitali: ’Koji je uzrok nastanka starosti i smrti?’, treba da odgovoriš: ’Rođenje je uzrok starosti i smrti’.",
-  "dn15:2.3": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka rođenja?’, treba da odgovoriš: ’Postoji’."
+  "dn15:2.3": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka rođenja?’, treba da odgovoriš: ’Postoji’.",
+  "dn15:2.4": "Ako bi te zatim pitali: ’Koji je uzrok nastanka rođenja?’, treba da odgovoriš: ’Bivanje je uzrok rođenju’."
 }
