--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -13,5 +13,6 @@
   "dn15:2.1": "Ako bi neko pitao: ’Postoji li neki poseban uzrok nastanka starosti i smrti?’",
   "dn15:2.2": "Ako bi te zatim pitali: ’Koji je uzrok nastanka starosti i smrti?’, treba da odgovoriš: ’Rođenje je uzrok starosti i smrti’.",
   "dn15:2.3": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka rođenja?’, treba da odgovoriš: ’Postoji’.",
-  "dn15:2.4": "Ako bi te zatim pitali: ’Koji je uzrok nastanka rođenja?’, treba da odgovoriš: ’Bivanje je uzrok rođenju’."
+  "dn15:2.4": "Ako bi te zatim pitali: ’Koji je uzrok nastanka rođenja?’, treba da odgovoriš: ’Bivanje je uzrok rođenju’.",
+  "dn15:2.5": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka bivanja?’, treba da odgovoriš: ’Postoji’."
 }
