Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -18,5 +18,6 @@
   "dn15:2.6": "Ako bi te zatim pitali: ’Koji je uzrok nastanka bivanja?’, treba da odgovoriš: ’Vezivanje je uzrok bivanju’.",
   "dn15:2.7": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka vezivanja?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.8": "Ako bi te zatim pitali: ’Koji je uzrok nastanka vezivanja?’, treba da odgovoriš: ’Žudnja je uzrok vezivanju’.",
-  "dn15:2.9": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka žudnje?’, treba da odgovoriš: ’Postoji’."
+  "dn15:2.9": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka žudnje?’, treba da odgovoriš: ’Postoji’.",
+  "dn15:2.10": "Ako bi te zatim pitali: ’Koji je uzrok nastanka žudnje?’, treba da odgovoriš: ’Osećaj je uzrok žudnji’."
 }
