--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -19,5 +19,6 @@
   "dn15:2.7": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka vezivanja?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.8": "Ako bi te zatim pitali: ’Koji je uzrok nastanka vezivanja?’, treba da odgovoriš: ’Žudnja je uzrok vezivanju’.",
   "dn15:2.9": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka žudnje?’, treba da odgovoriš: ’Postoji’.",
-  "dn15:2.10": "Ako bi te zatim pitali: ’Koji je uzrok nastanka žudnje?’, treba da odgovoriš: ’Osećaj je uzrok žudnji’."
+  "dn15:2.10": "Ako bi te zatim pitali: ’Koji je uzrok nastanka žudnje?’, treba da odgovoriš: ’Osećaj je uzrok žudnji’.",
+  "dn15:2.11": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka osećaja?’, treba da odgovoriš: ’Postoji’."
 }
