Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -24,7 +24,7 @@
   "dn15:2.12": "Ako bi te zatim pitali: ’Koji je uzrok nastanka osećaja?’, treba da odgovoriš: ’Kontakt je uzrok osećaju’.",
   "dn15:2.13": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka kontakta?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.14": "Ako bi te zatim pitali: ’Koji je uzrok nastanka kontakta?’, treba da odgovoriš: ’Mentalno-materijalno je uzrok kontaktu’.",
-  "dn15:2.15": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka šest područja čula?’, treba da odgovoriš: ’Postoji’.",
+  "dn15:2.15": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka mentalno-materijalnoga?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.16": "Ako bi te zatim pitali: ’Koji je uzrok nastanka šest područja čula?’, treba da odgovoriš: ’Mentalno-materijalno je uzrok šest područja čula.",
   "dn15:2.17": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka mentalnog-materijalnog?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.18": "Ako bi te zatim pitali: ’Koji je uzrok nastanka mentalnog-materijalnog?’, treba da odgovoriš: ’Svest je uzrok mentalno-materijalnom’."
