--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -26,6 +26,6 @@
   "dn15:2.14": "Ako bi te zatim pitali: ’Koji je uzrok nastanka kontakta?’, treba da odgovoriš: ’Mentalno-materijalno je uzrok kontaktu’.",
   "dn15:2.15": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka mentalno-materijalnoga?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.16": "Ako bi te zatim pitali: ’Koji je uzrok nastanka mentalno-materijalnog?’, treba da odgovoriš: ’Svest je uzrok mentalno-materijalnom.",
-  "dn15:2.17": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka mentalnog-materijalnog?’, treba da odgovoriš: ’Postoji’.",
+  "dn15:2.17": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka svesti?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.18": "Ako bi te zatim pitali: ’Koji je uzrok nastanka mentalnog-materijalnog?’, treba da odgovoriš: ’Svest je uzrok mentalno-materijalnom’."
 }
