Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -27,5 +27,6 @@
   "dn15:2.15": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka mentalno-materijalnoga?’, treba da odgovoriš: ’Postoji’.",
   "dn15:2.16": "Ako bi te zatim pitali: ’Koji je uzrok nastanka mentalno-materijalnog?’, treba da odgovoriš: ’Svest je uzrok mentalno-materijalnom.",
   "dn15:2.17": "Ako bi te neko pitao: ’Postoji li neki poseban uzrok nastanka svesti?’, treba da odgovoriš: ’Postoji’.",
-  "dn15:2.18": "Ako bi te zatim pitali: ’Koji je uzrok nastanka svesti?’, treba da odgovoriš: ’Mentalno-materijalno je uzrok svesti’."
+  "dn15:2.18": "Ako bi te zatim pitali: ’Koji je uzrok nastanka svesti?’, treba da odgovoriš: ’Mentalno-materijalno je uzrok svesti’.",
+  "dn15:3.1": "Dakle, sa mentalno-materijalnim kao uslovom, svest nastaje, sa svešću kao uslovom, mentalno-materijalno nastaje. Sa mentalno-materijalnim kao uslovom, kontakt nastaje. Sa kontaktom kao uslovom, osećaj nastaje. Sa osećajem kao uslovom, žudnja nastaje. Sa žudnjom kao uslovom, vezivanje nastaje. Sa vezivanjem kao uzrokom, bivanje nastaje. Sa bivanjem kao uzrokom, rođenje nastaje. Sa rođenjem kao uzrokom, žalost, naricanje, bol, tuga i očaj nastaju."
 }
