--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -324,7 +324,7 @@
   "ja-name:323.ja-kumbhavagga": "Das Kapitel mit dem Becher ",
   "ja-name:324.ja291": "Der Glücksbecher ",
   "ja-name:325.ja292": "Schönflügel der Krähenkönig ",
-  "ja-name:326.ja293": "Sichabwenden vom Körper ",
+  "ja-name:326.ja293": "Schwinden der Leidenschaft für den Körper ",
   "ja-name:327.ja294": "Die Krähe, die vom Rosenapfel aß ",
   "ja-name:328.ja295": "Das Schlimmste ",
   "ja-name:329.ja296": "Meerwasser trinken ",
