Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -31,5 +31,6 @@
   "dn15:3.1": "Dakle, sa mentalno-materijalnim kao uslovom, svest nastaje, sa svešću kao uslovom, mentalno-materijalno nastaje. Sa mentalno-materijalnim kao uslovom, kontakt nastaje. Sa kontaktom kao uslovom, osećaj nastaje. Sa osećajem kao uslovom, žudnja nastaje. Sa žudnjom kao uslovom, vezivanje nastaje. Sa vezivanjem kao uzrokom, bivanje nastaje. Sa bivanjem kao uzrokom, rođenje nastaje. Sa rođenjem kao uzrokom, žalost, naricanje, bol, tuga i očaj nastaju.",
   "dn15:3.2": "Tako nastaje čitav ovaj okean patnje.",
   "dn15:4.1": "’Rođenje je uzrok starosti i smrti’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:4.2": "Kada ne bi postojalo bilo kakvo rođenje, bilo gde, dakle"
+  "dn15:4.2": "Kada ne bi postojalo bilo kakvo rođenje, bilo gde, dakle",
+  "dn15:4.3": "bogova u stanje bogova, nebesnika u stanje nebesnika, demona u stanje demona, duhova, ljudi, četvoronožaca, ptica i gmizavaca, svako u svoje stanje, dakle da ne postoji bilo kakvo rođenje, bilo gde. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se  starost i smrt mogli bilo gde uočiti?”"
 }
