--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -32,5 +32,6 @@
   "dn15:3.2": "Tako nastaje čitav ovaj okean patnje.",
   "dn15:4.1": "’Rođenje je uzrok starosti i smrti’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:4.2": "Kada ne bi postojalo bilo kakvo rođenje, bilo gde, dakle",
-  "dn15:4.3": "bogova u stanje bogova, nebesnika u stanje nebesnika, demona u stanje demona, duhova, ljudi, četvoronožaca, ptica i gmizavaca, svako u svoje stanje, dakle da ne postoji bilo kakvo rođenje, bilo gde. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se  starost i smrt mogli bilo gde uočiti?”"
+  "dn15:4.3": "bogova u stanje bogova, nebesnika u stanje nebesnika, demona u stanje demona, duhova, ljudi, četvoronožaca, ptica i gmizavaca, svako u svoje stanje, dakle da ne postoji bilo kakvo rođenje, bilo gde. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se  starost i smrt mogli bilo gde uočiti?”",
+  "dn15:4.4": "„Sigurno da ne bi, poštovani gospodine."
 }
