--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -36,5 +36,6 @@
   "dn15:4.4": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:4.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka starosti i smrti, dakle rođenje.",
   "dn15:5.1": "’Bivanje je uzrok rođenju’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:5.2": "Zamisli da nema bilo kakvog bivanja, bilo gde, dakle"
+  "dn15:5.2": "Zamisli da nema bilo kakvog bivanja, bilo gde, dakle",
+  "dn15:5.3": "bivanje u području čulnog, bivanje u području suptilne materije ili bivanje u području bez materije. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se rođenje moglo bilo gde uočiti?”"
 }
