--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -39,5 +39,6 @@
   "dn15:5.2": "Zamisli da nema bilo kakvog bivanja, bilo gde, dakle",
   "dn15:5.3": "bivanje u području čulnog, bivanje u području suptilne materije ili bivanje u području bez materije. U potpunom odsustvu rođenje, sa nestankom rođenja, da li bi se rođenje moglo bilo gde uočiti?”",
   "dn15:5.4": "„Sigurno da ne bi, poštovani gospodine.",
-  "dn15:5.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka rođenja, dakle bivanje."
+  "dn15:5.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka rođenja, dakle bivanje.",
+  "dn15:6.1": "’Vezivanje je uzrok bivanju’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
