Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -43,5 +43,6 @@
   "dn15:6.1": "’Vezivanje je uzrok bivanju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:6.2": "Zamisli da nema bilo kakvog vezivanja, bilo gde, dakle",
   "dn15:6.3": "vezivanje za zadovoljstva čula, vezivanje za gledišta, vezivanje za pravila i rituale ili vezivanje za verovanje u postojanje trajnog sopstva. U potpunom odsustvu vezivanja, sa nestankom vezivanja, da li bi se bivanje moglo bilo gde uočiti?”",
-  "dn15:6.4": "„Sigurno da ne bi, poštovani gospodine."
+  "dn15:6.4": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:6.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov bivanja, dakle vezivanje."
 }
