--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -46,5 +46,5 @@
   "dn15:6.4": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:6.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov bivanja, dakle vezivanje.",
   "dn15:7.1": "’Žudnja je uzrok vezivanju’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:7.2": "Zamisli da nema bilo kakve žudnje, bilo gde, dakle"
+  "dn15:7.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle"
 }
