Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -47,5 +47,6 @@
   "dn15:6.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov bivanja, dakle vezivanje.",
   "dn15:7.1": "’Žudnja je uzrok vezivanju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:7.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle",
-  "dn15:7.3": "žudnja za oblicima, žudnja za zvukovima, žudnja za mirisima, žudnja za ukusima, žudnja za dodirima, žudnja za objektima uma. U potpunom odsustvu žudnje, sa nestankom žudnje, da li bi se vezivanje moglo bilo gde uočiti?”"
+  "dn15:7.3": "žudnja za oblicima, žudnja za zvukovima, žudnja za mirisima, žudnja za ukusima, žudnja za dodirima, žudnja za objektima uma. U potpunom odsustvu žudnje, sa nestankom žudnje, da li bi se vezivanje moglo bilo gde uočiti?”",
+  "dn15:7.4": "„Sigurno da ne bi, poštovani gospodine."
 }
