--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -50,5 +50,6 @@
   "dn15:7.3": "žudnja za oblicima, žudnja za zvukovima, žudnja za mirisima, žudnja za ukusima, žudnja za dodirima, žudnja za objektima uma. U potpunom odsustvu žudnje, sa nestankom žudnje, da li bi se vezivanje moglo bilo gde uočiti?”",
   "dn15:7.4": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:7.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov vezivanja, dakle žudnja.",
-  "dn15:8.1": "’Osećaj je uzrok žudnji’, tako je rečeno. I na ovaj način to treba razumeti:"
+  "dn15:8.1": "’Osećaj je uzrok žudnji’, tako je rečeno. I na ovaj način to treba razumeti:",
+  "dn15:8.2": "Zamisli da nema bilo kakvog osećaja, u bilo kome, bilo gde, dakle"
 }
