--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -51,5 +51,6 @@
   "dn15:7.4": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:7.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov vezivanja, dakle žudnja.",
   "dn15:8.1": "’Osećaj je uzrok žudnji’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:8.2": "Zamisli da nema bilo kakvog osećaja, u bilo kome, bilo gde, dakle"
+  "dn15:8.2": "Zamisli da nema bilo kakvog osećaja, u bilo kome, bilo gde, dakle",
+  "dn15:8.3": "osećaj rođen na osnovu kontakta okom, osećaj rođen na osnovu kontakta uhom, osećaj rođen na osnovu kontakta nosom, osećaj rođen na osnovu kontakta jezikom, osećaj rođen na osnovu kontakta telom, osećaj rođen na osnovu kontakta umom."
 }
