--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -53,5 +53,6 @@
   "dn15:8.1": "’Osećaj je uzrok žudnji’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:8.2": "Zamisli da nema bilo kakvog osećaja, u bilo kome, bilo gde, dakle",
   "dn15:8.3": "osećaj rođen na osnovu kontakta okom, osećaj rođen na osnovu kontakta uhom, osećaj rođen na osnovu kontakta nosom, osećaj rođen na osnovu kontakta jezikom, osećaj rođen na osnovu kontakta telom, osećaj rođen na osnovu kontakta umom. U potpunom odsustvu osećaja, sa nestankom osećaja, da li bi se žudnja mogla bilo gde uočiti?”",
-  "dn15:8.4": "„Sigurno da ne bi, poštovani gospodine."
+  "dn15:8.4": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:8.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov žudnje, dakle osećaj."
 }
