Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -55,5 +55,6 @@
   "dn15:8.3": "osećaj rođen na osnovu kontakta okom, osećaj rođen na osnovu kontakta uhom, osećaj rođen na osnovu kontakta nosom, osećaj rođen na osnovu kontakta jezikom, osećaj rođen na osnovu kontakta telom, osećaj rođen na osnovu kontakta umom. U potpunom odsustvu osećaja, sa nestankom osećaja, da li bi se žudnja mogla bilo gde uočiti?”",
   "dn15:8.4": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:8.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov žudnje, dakle osećaj.",
-  "dn15:9.1": "Dakle, osećaj je uslov za nastanak žudnje, žudnja je uslov za nastanak traganja, traganje je uslov za nastanak dobitka, dobitak je uslov za nastanak odlučivanja, odlučivanje je uslov za nastanak želje i strasti, želja i strast su uslov za nastanak prianjanja, prianjanje je uslov za nastanak posesivnosti, posesivnost je uslov za nastanak gramzivosti, gramzivost je uslov za nastanak prisvajanja."
+  "dn15:9.1": "Dakle, osećaj je uslov za nastanak žudnje, žudnja je uslov za nastanak traganja, traganje je uslov za nastanak dobitka, dobitak je uslov za nastanak odlučivanja, odlučivanje je uslov za nastanak želje i strasti, želja i strast su uslov za nastanak prianjanja, prianjanje je uslov za nastanak posesivnosti, posesivnost je uslov za nastanak gramzivosti, gramzivost je uslov za nastanak prisvajanja.",
+  "dn15:9.2": "Zbog prisvajanja nastaju mnoga loša, štetna dela, kao što su da se neko lati štapa i batine, sukobi, svađe i rasprave, uvredljive reči, ogovaranje i laganje."
 }
