Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -58,5 +58,6 @@
   "dn15:9.1": "Dakle, osećaj je uslov za nastanak žudnje, žudnja je uslov za nastanak traganja, traganje je uslov za nastanak dobitka, dobitak je uslov za nastanak odlučivanja, odlučivanje je uslov za nastanak želje i strasti, želja i strast su uslov za nastanak prianjanja, prianjanje je uslov za nastanak posesivnosti, posesivnost je uslov za nastanak gramzivosti, gramzivost je uslov za nastanak prisvajanja.",
   "dn15:9.2": "Zbog prisvajanja nastaju mnoga loša, štetna dela, kao što su da se neko lati štapa i batine, sukobi, svađe i rasprave, uvredljive reči, ogovaranje i laganje.",
   "dn15:10.1": "’Zbog prisvajanja nastaju mnoga loša, štetna dela’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:10.2": "Zamisli da nema bilo kakvog prisvajanja, za bilo koga, bilo gde, zbog kojeg nastaju mnoga loša, štetna dela, kao što su da se neko lati štapa i batine, sukobi, svađe i rasprave, uvredljive reči, ogovaranje i laganje. U potpunom odsustvu prisvajanja, sa nestankom prisvajanja, da li bi se mnoga loša, štetna dela mogla bilo gde uočiti?”"
+  "dn15:10.2": "Zamisli da nema bilo kakvog prisvajanja, za bilo koga, bilo gde, zbog kojeg nastaju mnoga loša, štetna dela, kao što su da se neko lati štapa i batine, sukobi, svađe i rasprave, uvredljive reči, ogovaranje i laganje. U potpunom odsustvu prisvajanja, sa nestankom prisvajanja, da li bi se mnoga loša, štetna dela mogla bilo gde uočiti?”",
+  "dn15:10.3": "„Sigurno da ne bi, poštovani gospodine."
 }
