Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -61,5 +61,6 @@
   "dn15:10.2": "Zamisli da nema bilo kakvog prisvajanja, za bilo koga, bilo gde, zbog kojeg nastaju mnoga loša, štetna dela, kao što su da se neko lati štapa i batine, sukobi, svađe i rasprave, uvredljive reči, ogovaranje i laganje. U potpunom odsustvu prisvajanja, sa nestankom prisvajanja, da li bi se mnoga loša, štetna dela mogla bilo gde uočiti?”",
   "dn15:10.3": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:10.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka mnogih loših, štetnih dela, dakle prisvajanje.",
-  "dn15:11.1": "’Zbog gramzivosti nastaje prisvajanje’, tako je rečeno. I na ovaj način to treba razumeti:"
+  "dn15:11.1": "’Zbog gramzivosti nastaje prisvajanje’, tako je rečeno. I na ovaj način to treba razumeti:",
+  "dn15:11.2": "Zamisli da nema bilo kakve gramzivosti, u bilo kome, bilo gde. U potpunom odsustvu gramzivosti, sa nestankom gramzivosti, da li bi se prisvajanje mogla bilo gde uočiti?”"
 }
