--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -62,5 +62,6 @@
   "dn15:10.3": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:10.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka mnogih loših, štetnih dela, dakle prisvajanje.",
   "dn15:11.1": "’Zbog gramzivosti nastaje prisvajanje’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:11.2": "Zamisli da nema bilo kakve gramzivosti, u bilo kome, bilo gde. U potpunom odsustvu gramzivosti, sa nestankom gramzivosti, da li bi se prisvajanje mogla bilo gde uočiti?”"
+  "dn15:11.2": "Zamisli da nema bilo kakve gramzivosti, u bilo kome, bilo gde. U potpunom odsustvu gramzivosti, sa nestankom gramzivosti, da li bi se prisvajanje mogla bilo gde uočiti?”",
+  "dn15:11.3": "„Sigurno da ne bi, poštovani gospodine."
 }
