Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -66,5 +66,6 @@
   "dn15:11.3": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:11.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka prisvajanja, dakle gramzivost.",
   "dn15:12.1": "’Zbog posesivnosti nastaje gramzivost’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:12.2": "Zamisli da nema bilo kakve posesisvnosti, u bilo kome, bilo gde. U potpunom odsustvu posesivnosti, sa nestankom posesivnosti, da li bi se gramzivost mogla bilo gde uočiti?”"
+  "dn15:12.2": "Zamisli da nema bilo kakve posesisvnosti, u bilo kome, bilo gde. U potpunom odsustvu posesivnosti, sa nestankom posesivnosti, da li bi se gramzivost mogla bilo gde uočiti?”",
+  "dn15:12.3": "„Sigurno da ne bi, poštovani gospodine."
 }
