--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -71,5 +71,6 @@
   "dn15:12.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka gramzivosti, dakle posesivnost.",
   "dn15:13.1": "’Zbog prianjanja nastaje posesivnost, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:13.2": "Zamisli da nema bilo kakvog prianjanja, u bilo kome, bilo gde. U potpunom odsustvu prianjanja, sa nestankom prianjanja, da li bi se posesivnost mogla bilo gde uočiti?”",
-  "dn15:13.3": "„Sigurno da ne bi, poštovani gospodine."
+  "dn15:13.3": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:13.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka posesivnosti, dakle prianjanje."
 }
