Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -75,5 +75,6 @@
   "dn15:13.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka posesivnosti, dakle prianjanje.",
   "dn15:14.1": "’Zbog želje i strasti nastaje prianjanje, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:14.2": "Zamisli da nema bilo kakve želje i strasti, u bilo kome, bilo gde. U potpunom odsustvu želje i strasti, sa nestankom želje i strasti, da li bi se prianjanje moglo bilo gde uočiti?”",
-  "dn15:14.3": "„Sigurno da ne bi, poštovani gospodine."
+  "dn15:14.3": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:14.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka prianjanja, dakle želja i strast."
 }
