--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -78,5 +78,6 @@
   "dn15:14.3": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:14.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka prianjanja, dakle želja i strast.",
   "dn15:15.1": "’Zbog odlučivanja nastaju želja i strast, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:15.2": "Zamisli da nema bilo kakvod odlučivanja, u bilo kome, bilo gde. U potpunom odsustvu odlučivanja, sa nestankom odlučivanja, da li bi se želja i strast mogli bilo gde uočiti?”"
+  "dn15:15.2": "Zamisli da nema bilo kakvod odlučivanja, u bilo kome, bilo gde. U potpunom odsustvu odlučivanja, sa nestankom odlučivanja, da li bi se želja i strast mogli bilo gde uočiti?”",
+  "dn15:15.3": "„Sigurno da ne bi, poštovani gospodine."
 }
