--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -80,5 +80,6 @@
   "dn15:15.1": "’Zbog odlučivanja nastaju želja i strast, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:15.2": "Zamisli da nema bilo kakvod odlučivanja, u bilo kome, bilo gde. U potpunom odsustvu odlučivanja, sa nestankom odlučivanja, da li bi se želja i strast mogli bilo gde uočiti?”",
   "dn15:15.3": "„Sigurno da ne bi, poštovani gospodine.",
-  "dn15:15.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka želje i strasti, dakle odlučivanje."
+  "dn15:15.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka želje i strasti, dakle odlučivanje.",
+  "dn15:16.1": "’Zbog dobitka nastaje odlučivanje’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
