Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.104:0.1": "Verbundene Lehrreden 35.104 ",
-  "sn35.104:0.2": "11. Das Kapitel über Geborgenheit "
+  "sn35.104:0.2": "11. Das Kapitel über Geborgenheit ",
+  "sn35.104:0.3": "Geborgenheit "
 }
