Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -88,5 +88,6 @@
   "dn15:17.1": "’Zbog traganja nastaje dobitak’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:17.2": "Zamisli da nema bilo kakvog traganja, u bilo kome, bilo gde. U potpunom odsustvu traganja, sa nestankom traganja, da li bi se dobitak mogao bilo gde uočiti?”",
   "dn15:17.3": "„Sigurno da ne bi, poštovani gospodine.",
-  "dn15:17.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka dobitka, dakle traganje."
+  "dn15:17.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka dobitka, dakle traganje.",
+  "dn15:18.1": "’Zbog žudnje nastaje traganje’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
