Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -90,5 +90,6 @@
   "dn15:17.3": "„Sigurno da ne bi, poštovani gospodine.",
   "dn15:17.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka dobitka, dakle traganje.",
   "dn15:18.1": "’Zbog žudnje nastaje traganje’, tako je rečeno. I na ovaj način to treba razumeti:",
-  "dn15:18.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle"
+  "dn15:18.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle",
+  "dn15:18.3": "žudnja za zadovoljstvima čula, žudnja za postojanjem, žudnja za nepostojanjem. U potpunom odsustvu žudnje, sa nestankom žudnje, da li bi se traganje moglo bilo gde uočiti?”"
 }
