Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.104:0.1": "Verbundene Lehrreden 35.104 ",
   "sn35.104:0.2": "11. Das Kapitel über Geborgenheit ",
   "sn35.104:0.3": "Geborgenheit ",
-  "sn35.104:1.1": "In Sāvatthī. "
+  "sn35.104:1.1": "In Sāvatthī. ",
+  "sn35.104:1.2": "„Mönche und Nonnen, ich will euch eine Lehrdarlegung geben, eine Darlegung über einen, der die Geborgenheit erreicht hat. "
 }
