--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.104:0.2": "11. Das Kapitel über Geborgenheit ",
   "sn35.104:0.3": "Geborgenheit ",
   "sn35.104:1.1": "In Sāvatthī. ",
-  "sn35.104:1.2": "„Mönche und Nonnen, ich will euch eine Lehrdarlegung geben, eine Darlegung über einen, der die Geborgenheit erreicht hat. "
+  "sn35.104:1.2": "„Mönche und Nonnen, ich will euch eine Lehrdarlegung geben, eine Darlegung über einen, der die Geborgenheit erreicht hat. ",
+  "sn35.104:1.3": "Hört zu … "
 }
