Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -93,5 +93,6 @@
   "dn15:18.2": "Zamisli da nema bilo kakve žudnje, u bilo kome, bilo gde, dakle",
   "dn15:18.3": "žudnja za zadovoljstvima čula, žudnja za postojanjem, žudnja za nepostojanjem. U potpunom odsustvu žudnje, sa nestankom žudnje, da li bi se traganje moglo bilo gde uočiti?”",
   "dn15:18.4": "„Sigurno da ne bi, poštovani gospodine.",
-  "dn15:18.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov traganja, dakle žudnja."
+  "dn15:18.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov traganja, dakle žudnja.",
+  "dn15:18.6": "Tako, Ānanda, te dve stvari bivaju ujedinjene kroz dva vida osećaja."
 }
