--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -5,5 +5,6 @@
   "sn35.104:1.1": "In Sāvatthī. ",
   "sn35.104:1.2": "„Mönche und Nonnen, ich will euch eine Lehrdarlegung geben, eine Darlegung über einen, der die Geborgenheit erreicht hat. ",
   "sn35.104:1.3": "Hört zu … ",
-  "sn35.104:1.4": "Und was ist die Lehrdarlegung, die Darlegung über einen, der die Geborgenheit erreicht hat? "
+  "sn35.104:1.4": "Und was ist die Lehrdarlegung, die Darlegung über einen, der die Geborgenheit erreicht hat? ",
+  "sn35.104:1.5": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
 }
