--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "sn35.104:1.2": "„Mönche und Nonnen, ich will euch eine Lehrdarlegung geben, eine Darlegung über einen, der die Geborgenheit erreicht hat. ",
   "sn35.104:1.3": "Hört zu … ",
   "sn35.104:1.4": "Und was ist die Lehrdarlegung, die Darlegung über einen, der die Geborgenheit erreicht hat? ",
-  "sn35.104:1.5": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. "
+  "sn35.104:1.5": "Es gibt Bilder, die das Auge erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.104:1.6": "Der Klargewordene hat diese aufgegeben, sie an der Wurzel abgeschnitten, sodass sie wie der Stumpf einer Palme sind, dass sie ausgelöscht sind und sich in Zukunft nicht mehr erheben können. "
 }
