--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -97,5 +97,6 @@
   "dn15:18.6": "Tako, Ānanda, te dve stvari bivaju ujedinjene kroz dva vida osećaja.",
   "dn15:19.1": "’Kontakt je uzrok osećaju’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:19.2": "Zamisli da nema bilo kakve kontakta, u bilo kome, bilo gde, dakle",
-  "dn15:19.3": "kontakt oka, kontakt uha, kontakt nosa, kontakt jezika, kontakt tella i kontakt uma. U potpunom odsustvu kontakta, sa nestankom kontakta, da li bi se osećaj mogao bilo gde uočiti?”"
+  "dn15:19.3": "kontakt oka, kontakt uha, kontakt nosa, kontakt jezika, kontakt tella i kontakt uma. U potpunom odsustvu kontakta, sa nestankom kontakta, da li bi se osećaj mogao bilo gde uočiti?”",
+  "dn15:19.4": "„Sigurno da ne bi, poštovani gospodine."
 }
