--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.104_translation-de-sabbamitta.json
@@ -10,5 +10,7 @@
   "sn35.104:1.6": "Der Klargewordene hat diese aufgegeben, sie an der Wurzel abgeschnitten, sodass sie wie der Stumpf einer Palme sind, dass sie ausgelöscht sind und sich in Zukunft nicht mehr erheben können. ",
   "sn35.104:1.7": "Er lehrt Meditation für das Ziel, sie aufzugeben. Deshalb nennt man den Klargewordenen einen, der die Geborgenheit erreicht hat. … ",
   "sn35.104:1.8": "Es gibt Gedanken, die der Geist erkennt, erwünscht, willkommen, angenehm, erfreulich, sinnlich und erregend. ",
+  "sn35.104:1.9": "Der Klargewordene hat diese aufgegeben, sie an der Wurzel abgeschnitten, sodass sie wie der Stumpf einer Palme sind, dass sie ausgelöscht sind und sich in Zukunft nicht mehr erheben können. ",
+  "sn35.104:1.10": "Er lehrt Meditation für das Ziel, sie aufzugeben. Deshalb nennt man den Klargewordenen einen, der die Geborgenheit erreicht hat. ",
   "sn35.104:1.11": "das ist die Lehrdarlegung, die Darlegung über einen, der die Geborgenheit erreicht hat.“ "
 }
