--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.105:0.1": "Verbundene Lehrreden 35.105 ",
-  "sn35.105:0.2": "11. Das Kapitel über Geborgenheit "
+  "sn35.105:0.2": "11. Das Kapitel über Geborgenheit ",
+  "sn35.105:0.3": "Weil man ergreift "
 }
