Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -99,5 +99,6 @@
   "dn15:19.2": "Zamisli da nema bilo kakve kontakta, u bilo kome, bilo gde, dakle",
   "dn15:19.3": "kontakt oka, kontakt uha, kontakt nosa, kontakt jezika, kontakt tella i kontakt uma. U potpunom odsustvu kontakta, sa nestankom kontakta, da li bi se osećaj mogao bilo gde uočiti?”",
   "dn15:19.4": "„Sigurno da ne bi, poštovani gospodine.",
-  "dn15:19.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov osećaja, dakle kontakt."
+  "dn15:19.5": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov osećaja, dakle kontakt.",
+  "dn15:20.1": "’Mentalno-materijalno je uzrok kontaktu’, tako je rečeno. I na ovaj način to treba razumeti:"
 }
