Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn35.105:0.3": "Weil man ergreift ",
   "sn35.105:1.1": "„Mönche und Nonnen, wenn was besteht, weil man was ergreift, entstehen in einem Glück und Schmerz?“ ",
   "sn35.105:2.1": "„Unsere Lehren wurzeln im Buddha …“ ",
-  "sn35.105:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift, entstehen in einem Glück und Schmerz. … "
+  "sn35.105:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift, entstehen in einem Glück und Schmerz. … ",
+  "sn35.105:3.2": "Wenn ein Geist besteht, weil man einen Geist ergreift, entstehen in einem Glück und Schmerz. "
 }
