Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.105:3.1": "„Wenn das Auge besteht, Mönche und Nonnen, weil man das Auge ergreift, entstehen in einem Glück und Schmerz. … ",
   "sn35.105:3.2": "Wenn der Geist besteht, weil man den Geist ergreift, entstehen in einem Glück und Schmerz. ",
   "sn35.105:3.3": "Was denkt ihr, Mönche und Nonnen? ",
-  "sn35.105:3.4": "Ist das Auge beständig oder unbeständig?“ "
+  "sn35.105:3.4": "Ist das Auge beständig oder unbeständig?“ ",
+  "sn35.105:4.1": "„Unbeständig, Herr.“ "
 }
