Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.105_translation-de-sabbamitta.json
@@ -8,5 +8,6 @@
   "sn35.105:3.2": "Wenn der Geist besteht, weil man den Geist ergreift, entstehen in einem Glück und Schmerz. ",
   "sn35.105:3.3": "Was denkt ihr, Mönche und Nonnen? ",
   "sn35.105:3.4": "Ist das Auge beständig oder unbeständig?“ ",
-  "sn35.105:4.1": "„Unbeständig, Herr.“ "
+  "sn35.105:4.1": "„Unbeständig, Herr.“ ",
+  "sn35.105:5.1": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
 }
