Translations by Bundi-py to translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json

--- a/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn15_translation-sr-brankokovacevic.json
@@ -83,7 +83,7 @@
   "dn15:15.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka želje i strasti, dakle odlučivanje.",
   "dn15:16.1": "’Zbog dobitka nastaje odlučivanje’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:16.2": "Zamisli da nema bilo kakvog dobitka, u bilo kome, bilo gde. U potpunom odsustvu dobitka, sa nestankom dobitka, da li bi se odlučivanje moglo bilo gde uočiti?”",
-  "dn15:16.3": "„Sigurno da ne bi, poštovani gospodine.",
+  "dn15:16.3": "„Sigurno da ne bi, poštovani gospodine.”",
   "dn15:16.4": "„Zato, Ānanda, to je uzrok, izvor, poreklo i uslov nastanka odlučivanja, dakle dobitak.",
   "dn15:17.1": "’Zbog traganja nastaje dobitak’, tako je rečeno. I na ovaj način to treba razumeti:",
   "dn15:17.2": "Zamisli da nema bilo kakvog traganja, u bilo kome, bilo gde. U potpunom odsustvu traganja, sa nestankom traganja, da li bi se dobitak mogao bilo gde uočiti?”",
